@@ -1,106 +1,79 @@
 package org.example.service;
 
+import org.example.persistence.ReservationDAO;
+import org.example.persistence.WorkspaceDAO;
 import org.example.entity.Interval;
+import org.example.entity.Reservation;
 import org.example.entity.Workspace;
 import org.example.exception.WorkspaceNotFoundException;
-import org.example.persistence.WorkspaceFileStorage;
 
-import java.io.IOException;
-import java.util.*;
+import java.util.Date;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public final class WorkspaceService {
-    private static final Map<Integer, Workspace> workspacesMap = new HashMap<>();
-    private static final ReservationService reservationService = new ReservationService();
-    private static int lastId = 0;
+    private final WorkspaceDAO workspaceDAO = new WorkspaceDAO();
+    private final ReservationDAO reservationDAO = new ReservationDAO();
+
+    public List<Workspace> getAllWorkspaces() {
+        return workspaceDAO.findAll();
+    }
 
     public Optional<Workspace> findWorkspaceById(int id) {
-        return Optional.ofNullable(workspacesMap.get(id));
+        return workspaceDAO.findById(id);
     }
 
     public Workspace getWorkspaceByIdOrThrow(int id) {
-        return Optional.ofNullable(workspacesMap.get(id))
-                .orElseThrow(() -> new WorkspaceNotFoundException("Workspace not found for ID: " + id));
-    }
-
-    public List<Workspace> getAllWorkspaces() {
-        return List.copyOf(workspacesMap.values());
+        return findWorkspaceById(id).orElseThrow(() -> new WorkspaceNotFoundException("Workspace not found for ID: " + id));
     }
 
     public List<Workspace> getAvailableWorkspaces(Interval interval) {
-        if (interval == null) return Collections.emptyList();
-
-        return workspacesMap.values().stream()
+        if (interval == null) return List.of();
+        return workspaceDAO.findAll().stream()
                 .filter(workspace -> isWorkspaceAvailable(workspace.getId(), interval))
                 .collect(Collectors.toList());
     }
 
     public void createWorkspace(Workspace workspace) {
-        workspace.setId(++lastId);
-        workspacesMap.put(workspace.getId(), workspace);
-        System.out.printf("Workspace created successfully!\nWorkspace ID: %d%n", workspace.getId());
-        saveToFile();
+        workspaceDAO.saveWorkspace(workspace);
+        System.out.println("Workspace created successfully!");
     }
 
     public void editWorkspace(int id, Workspace updated) {
-        findWorkspaceById(id).ifPresentOrElse(existing -> {
-            updated.setId(id);
-            workspacesMap.put(id, updated);
+        if (workspaceDAO.updateWorkspace(id, updated)) {
             System.out.println("Workspace updated successfully!");
-            saveToFile();
-        }, () -> System.out.println("Workspace not found for ID: " + id));
+        } else {
+            System.out.println("Workspace not found for ID: " + id);
+        }
     }
 
     public void deleteWorkspace(int id) {
-        findWorkspaceById(id).ifPresentOrElse(workspace -> {
-            boolean hasFutureReservation = reservationService.getAllReservations().stream()
-                    .anyMatch(reservation ->
-                            reservation.getSpaceId() == id &&
-                                    reservation.getInterval().getEndTime().after(new Date()));
+        List<Reservation> all = reservationDAO.getAllReservations();
+        boolean hasFutureReservation = all.stream()
+                .anyMatch(reservation ->
+                        reservation.getSpaceId() == id &&
+                                reservation.getInterval().getEndTime().after(new Date()));
 
-            if (hasFutureReservation) {
-                System.out.println("This workspace cannot be deleted because there are upcoming reservations!");
-                return;
-            }
+        if (hasFutureReservation) {
+            System.out.println("This workspace cannot be deleted because there are upcoming reservations!");
+            return;
+        }
 
-            workspacesMap.remove(id);
+        if (workspaceDAO.deleteWorkspace(id)) {
             System.out.println("Workspace deleted successfully!");
-            saveToFile();
-        }, () -> System.out.println("Workspace not found for ID: " + id));
+        } else {
+            System.out.println("Workspace not found for ID: " + id);
+        }
     }
 
     public boolean workspaceExists(int id) {
-        return workspacesMap.containsKey(id);
+        return workspaceDAO.findById(id).isPresent();
     }
 
     public boolean isWorkspaceAvailable(int id, Interval interval) {
-        return reservationService.getAllReservations().stream()
+        return reservationDAO.getAllReservations().stream()
                 .filter(r -> r.getSpaceId() == id)
                 .noneMatch(r -> Interval.isOverlap(r.getInterval(), interval));
-    }
-
-    public void loadFromFile() {
-        try {
-            List<Workspace> loaded = WorkspaceFileStorage.load();
-            workspacesMap.clear();
-            loaded.forEach(ws -> workspacesMap.put(ws.getId(), ws));
-
-            lastId = workspacesMap.keySet().stream()
-                    .mapToInt(Integer::intValue)
-                    .max()
-                    .orElse(0);
-
-            System.out.println("Workspaces loaded from file.");
-        } catch (IOException e) {
-            System.out.println("No saved workspaces file found. Starting fresh.");
-        }
-    }
-
-    public void saveToFile() {
-        try {
-            WorkspaceFileStorage.save(new ArrayList<>(workspacesMap.values()));
-        } catch (IOException e) {
-            System.out.println("Failed to save workspaces: " + e.getMessage());
-        }
     }
 }
